--- a/packages/hoppscotch-agent/index.html
+++ b/packages/hoppscotch-agent/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hoppscotch Agent</title>
   </head>
-  <body>
+  <body style="background-color: #f9fafb; font-family: sans-serif;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
